--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "randomstring": "^1.1.5",
     "redis": "^2.8.0"
@@ -19,7 +20,7 @@
   "devDependencies": {
     "nodemon": "^1.12.1"
   },
-  "engines": { 
-    "node" : ">=8.40" 
+  "engines": {
+    "node": ">=8.40"
   }
 }
