--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "dev": "nodemon server.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
